# gymmanager

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REPORT.md  alembic.ini  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 202410050001_create_gym_customer_tables.py  202410050002_add_gym_description_type.py  202410050003_split_customer_name.py  202410050004_add_customer_date_of_birth.py
app/: main.py
app/api/: deps.py
app/api/routers/: auth.py  customers.py  gyms.py
app/core/: config.py  logging.py  mailer.py  metrics.py  security.py
app/db/: base.py  session.py
app/domain/: models.py  schemas.py
app/services/: auth.py  customers.py  gyms.py
docs/monitoring/: README.md  grafana-dashboard.json  prometheus.yml
instructions/: assignment-2-plan.md  assignment1-milestone.md  coding-agent.md
tests/: conftest.py  test_auth.py  test_customers.py  test_gyms.py  test_mailer.py  test_metrics.py  test_security.py  test_services.py
