[project]
name = "fastapi-gym"
version = "0.1.0"
description = "Modular FastAPI backend for managing gyms and customers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gym Manager Team" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic",
    "pydantic-settings",
    "passlib[bcrypt]",
    "pyjwt",
    "alembic",
    "python-multipart",
    "httpx",
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
